fix MView, create addContent
